Improved contrast on movies, fixing #15

--- a/public/main.sass
+++ b/public/main.sass
@@ -25,10 +25,12 @@ body
 	line-height: 2
 
 .movie
-	background-color: $muted-color
+	background-color: darken($muted-color, 35%)
+	color: $light-color
 	display: inline-block
 	margin: 0rem $small-margin $small-margin 0
 	padding: 6px
+	border: 1px solid $muted-color
 	border-radius: 6px
 	line-height: 1
 	transition: all 0.125s ease
